--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -302,94 +302,13 @@ Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weite
 [#step-two-add-items]
 === Schritt 2: Artikel hinzufügen
 
-In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Überprüfung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
+Sobald du alle Auftragsdetails in Schritt 1 eingetragen hast, kannst du nun in einem weiteren Schritt deine gewünschten Artikel zum Auftrag hinzufügen. In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Zusammenfassung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
 
+[.collapseBox]
+.*Artikeltabelle individualisieren*
+--
 
-Um einen Auftrag anzulegen, müssen zunächst Artikel hinzugefügt werden. Führe eine Suche (material:search[]) aus, um die passenden Artikel zu finden und hinzuzufügen. Nutze außerdem Filter, um die Suche weiter einzugrenzen.
-
-Zusätzlich kannst du die Optionen *Nur aktive Artikel anzeigen*, *Nur vorrätige Artikel anzeigen*, *Nur Vertriebslager anzeigen* und *Nur Artikel mit gültigem Preis anzeigen* wählen. Wenn du in den Grundeinstellungen die Lagereinstellung *a) pro Auftrag kann ein Lager zugeordnet werden* gewählt hast, steht dir die Option *Nur Vertriebslager anzeigen* nicht zur Verfügung, weil du das Lager bereits bestimmt hast. Zudem greifen bei der Suche die <<carrying-out-standard-settings, Standardeinstellungen>>, die du zuvor vorgenommen hast.
-
-Anhand der Suche (material:search[]) kannst du die gewünschten Artikel finden und dem Auftrag hinzufügen. Verwende eine der folgenden Möglichkeiten, um nach Artikeln zu suchen.
-
-[.instruction]
-Artikel suchen:
-
-.. *_Möglichkeit 1:_* Klicke auf material:search[], um direkt eine Liste aller Artikel zu sehen.
-.. *_Möglichkeit 2:_* Gib etwas in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
-.. *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Die folgende Tabelle listet alle verfügbaren Filter.
-
-[[table-order-filters]]
-.Filter für Auftragspositionen
-[cols="1,3"]
-|===
-|Filter |Erläuterung
-
-| *Volltext*
-|Gib etwas ein, um eine Volltextsuche zu starten.
-
-| *Artikel-ID*
-|Gib eine ID ein, um nach Artikeln mit dieser ID zu filtern.
-
-| *Artikelname*
-|Gib einen Namen ein, um nach Artikeln mit diesem Namen zu filtern.
-
-| *Variantennummer*
-|Gib eine Variantennummer ein, um nach Artikeln mit dieser Variantennummer zu filtern.
-
-| *Varianten-ID*
-|Gib eine Varianten-ID ein, um nach Artikeln mit dieser Varianten-ID zu filtern.
-
-| *Barcode*
-|Gib einen Barcode ein, um nach Artikeln mit diesem Barcode zu filtern.
-
-| *Hersteller*
-|Gib einen Hersteller ein, um nach Artikeln dieses Herstellers zu filtern.
-
-| *Artikel-Tag*
-|Gib ein Tag ein, um nach Artikeln mit diesem Tag zu filtern.
-
-| *Nur vorrätige Artikel anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach vorrätigen Artikeln zu filtern.
-
-| *Nur aktive Artikel anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach aktiven Artikeln zu filtern.
-
-| *Nur Vertriebslager anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach Artikeln in Vertriebslagern zu filtern.
-
-| *Nur Artikel mit gültigem Preis anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach Artikeln mit gültigem Preis zu filtern.
-
-|===
-
-[#save-search-settings]
-=== Sucheinstellungen speichern
-
-Wenn du eine Suche ausführst, werden deine gewählten Sucheinstellungen oben als Chips dargestellt.
-Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können.
-
-[#save-current-filter]
-==== Aktuellen Filter speichern
-
-. Führe eine Suche aus.
-. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
-. Klicke auf material:bookmark_border[role=darkGrey] *Aktuellen Filter speichern*.
-. Gib einen Namen ein und schalte die optionalen Einstellungen bei Bedarf ein (material:toggle_on[role=skyBlue]).
-. Klicke auf *Speichern*. +
-→ Die Filtereinstellungen erscheinen nun unter *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
-
-
-[#use-saved-filters]
-==== Gespeicherte Filter anwenden
-
-. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
-. Klicke auf eine bereits erstellte Filtereinstellung. +
-→ Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als Chips dargestellt.
-
-[#customise-table]
-==== Tabelle individualisieren
-
-Die Artikeltabelle kann individuell gestaltet werden. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden und in welcher Reihenfolge sie platziert sind. Gehe dafür vor wie folgt.
+Die Artikeltabelle kann individuell gestaltet werden. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden und in welcher Reihenfolge sie platziert sind. Um die Tabelle anzupassen, gehe vor wie folgt.
 
 [.instruction]
 Tabelle individualisieren:
@@ -489,6 +408,91 @@ Diese Spalte ist eine Standardspalte.
 
 |===
 
+--
+
+[#search-items]
+==== Artikel suchen
+
+Anhand der Suche (material:search[]) kannst du die gewünschten Artikel finden und dem Auftrag hinzufügen. Wenn du eine Suche ausführst, werden deine gewählten Sucheinstellungen oben als Chips dargestellt. Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können. +
+Verwende eine der folgenden Möglichkeiten, um nach Artikeln zu suchen.
+
+[.instruction]
+Artikel suchen:
+
+.. *_Möglichkeit 1:_* Klicke auf material:search[], um direkt eine Liste aller Artikel zu sehen.
+.. *_Möglichkeit 2:_* Gib etwas in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
+.. *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+
+Führe eine <<#search-items, Suche>> (material:search[]) aus, um die passenden Artikel zu finden und dem Auftrag hinzuzufügen. Nutze außerdem die in der folgenden Tabelle aufgeführten Filter, um die Suche weiter einzugrenzen. Beachte, dass deine zuvor vorgenommenen <<carrying-out-standard-settings, Standardeinstellungen>> bei der Suche greifen.
+
+[[table-order-filters]]
+.Filter für Auftragspositionen
+[cols="1,3"]
+|===
+|Filter |Erläuterung
+
+| *Volltext*
+|Gib etwas ein, um eine Volltextsuche zu starten.
+
+| *Artikel-ID*
+|Gib eine ID ein, um nach Artikeln mit dieser ID zu filtern.
+
+| *Artikelname*
+|Gib einen Namen ein, um nach Artikeln mit diesem Namen zu filtern.
+
+| *Variantennummer*
+|Gib eine Variantennummer ein, um nach Artikeln mit dieser Variantennummer zu filtern.
+
+| *Varianten-ID*
+|Gib eine Varianten-ID ein, um nach Artikeln mit dieser Varianten-ID zu filtern.
+
+| *Barcode*
+|Gib einen Barcode ein, um nach Artikeln mit diesem Barcode zu filtern.
+
+| *Hersteller*
+|Gib einen Hersteller ein, um nach Artikeln dieses Herstellers zu filtern.
+
+| *Artikel-Tag*
+|Gib ein Tag ein, um nach Artikeln mit diesem Tag zu filtern.
+
+| *Nur vorrätige Artikel anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach vorrätigen Artikeln zu filtern.
+
+| *Nur aktive Artikel anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach aktiven Artikeln zu filtern.
+
+| *Nur Vertriebslager anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach Artikeln in Vertriebslagern zu filtern. +
+*_Hinweis:_* Wenn du in den Grundeinstellungen die Lagereinstellung *a) pro Auftrag kann ein Lager zugeordnet werden* gewählt hast, steht dir die Option *Nur Vertriebslager anzeigen* nicht zur Verfügung, weil du das Lager bereits bestimmt hast.
+
+| *Nur Artikel mit gültigem Preis anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach Artikeln mit gültigem Preis zu filtern.
+
+|===
+
+[#save-current-filter]
+==== Aktuellen Filter speichern
+
+. Führe eine Suche aus.
+. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
+. Klicke auf material:bookmark_border[role=darkGrey] *Aktuellen Filter speichern*.
+. Gib einen Namen ein und schalte die optionalen Einstellungen bei Bedarf ein (material:toggle_on[role=skyBlue]).
+. Klicke auf *Speichern*. +
+→ Die Filtereinstellungen erscheinen nun unter *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
+
+
+[#use-saved-filters]
+==== Gespeicherte Filter anwenden
+
+. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
+. Klicke auf eine bereits erstellte Filtereinstellung. +
+→ Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als Chips dargestellt.
+
+[#adding-items]
+=== Artikel hinzufügen
+
+Nachdem du mithilfe der Suche oder anhand von Filtern alle gewünschten Artikel gefunden hast, kannst du sie dem Auftrag hinzufügen. Gehe dazu vor wie folgt.
+
 [.instruction]
 Artikel hinzufügen:
 
@@ -497,13 +501,13 @@ Artikel hinzufügen:
 . Gib die Menge des Artikels ein, die dem Auftrag hinzugefügt werden soll. +
 → Nimmst du Preis- oder Mengenänderungen vor, gehe rechts in der jeweiligen Zeile in das Kontextmenü (material:more_vert[]) und aktualisiere den Verkaufspreis mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]). +
 *_Tipp:_* Links oben in der Tabelle kannst du mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]) alle Preis- und Mengenänderungen auf einmal aktualisieren.
-. Klicke am Ende der jeweiligen Zeile auf den Warenkorb (material:add_shopping_cart[]), um den Artikel dem Auftrag hinzuzufügen.
+. Klicke am Ende der jeweiligen Zeile auf *Zum Warenkorb hinzufügen* (material:add_shopping_cart[]), um den Artikel zum Warenkorb hinzuzufügen.
 . Wiederhole diese Schritte, um weitere Artikel hinzuzufügen.
 . Wenn alle Artikel hinzugefügt wurden, gehe zum nächsten Schritt, indem du auf *ZUSAMMENFASSUNG* klickst. +
-→ Der Warenkorb wird gespeichert.
+→ Der Warenkorb wird gespeichert und du wirst zum letzten Schritt weitergeleitet.
 
 [#shopping-cart]
-=== Warenkorb
+=== Warenkorb bearbeiten
 
 In der Tabelle des Warenkorbs kannst du sowohl den *Artikelnamen* als auch die *Menge* und den *Verkaufspreis* anpassen. Sobald du die Angaben der Menge oder des Preises änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorb. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
 
@@ -522,7 +526,16 @@ Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast,
 [.collapseBox]
 .*Warenkorbtabelle individualisieren*
 --
-Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen.
+Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert.
+
+[.instruction]
+Tabelle individualisieren:
+
+. Klicke auf *Spalten konfigurieren* (material:settings[]). +
+→ Das Fenster *Spalten konfigurieren* wird geöffnet.
+. Wähle, welche Spalten angezeigt werden sollen.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
+. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 [[table-shopping-cart]]
 .Tabellenspalten Warenkorb
@@ -633,17 +646,6 @@ Diese Spalte ist keine Standardspalte.
 |Ist dieses Feld gewählt, sind die Aktionen zum Bearbeiten (material:edit[]) und Löschen (material:delete[]) des Artikels verfügbar.
 |===
 
-Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
-
-[.instruction]
-Tabelle individualisieren:
-
-. Klicke auf *Spalten konfigurieren* (material:settings[]). +
-→ Das Fenster *Spalten konfigurieren* wird geöffnet.
-. Wähle, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
-. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
-
 --
 
 [#edit-order-item-properties]
@@ -698,7 +700,19 @@ Unterhalb der Auftragsdetails wird eine Tabelle mit den ausgewählten Artikelpos
 [.collapseBox]
 .*Tabelle individualisieren*
 --
-Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Die folgenden Tabellenspalten sind verfügbar:
+
+Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert.
+
+[.instruction]
+Tabelle individualisieren:
+
+. Klicke auf *Spalten konfigurieren* (material:settings[]). +
+→ Das Fenster *Spalten konfigurieren* wird geöffnet.
+. Wähle, welche Spalten angezeigt werden sollen.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
+. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
+
+Die Tabelle verfügt über die folgenden Spalten: +
 
 * Ausklappen
 * Menge
@@ -723,17 +737,6 @@ Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpass
 * Lagerorte
 * Gewinnspanne (netto)
 * Nachbestellungs-ID
-
-Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
-
-[.instruction]
-Tabelle individualisieren:
-
-. Klicke auf *Spalten konfigurieren* (material:settings[]). +
-→ Das Fenster *Spalten konfigurieren* wird geöffnet.
-. Wähle, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
-. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
 
