--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -116,13 +116,6 @@ Im Schritt *E-Mail-Weiterleitung* wird automatisch eine kryptische E-Mail-Adress
 
 Gib im unteren Bereich alle E-Mail-Adressen ein, die Nachrichten an die kryptische, weiterleitende E-Mail-Adresse oben senden dürfen. Du kannst beliebig viele E-Mail-Adressen mit einem Klick auf *Neuen Eintrag hinzufügen* (material:add[]) hinzufügen. Bestehende E-Mail-Adressen können mit einem Klick auf *Eintrag entfernen* (material:delete[]) gelöscht werden. *_Hinweis:_* Mindestens eine E-Mail-Adresse muss hier eingetragen werden.
 
-//// 
-[#verifizierung-e-mail-adressen]
-==== Verifizierung der E-Mail-Adressen
-
-In diesem Schritt siehst du den Fortschritt des Verifizierungsvorgangs. plentymarkets sendet eine E-Mail an alle E-Mail-Adressen, die du im vorherigen Schritt <<#e-mail-weiterleitung, E-Mail-Weiterleitung>> eingegeben hast. Das System prüft dann, ob die E-Mail-Adressen valide sind und die Weiterleitungen funktionieren.
-////
-
 [#einstellungen-e-mail-versand]
 ==== Einstellungen für den E-Mail-Versand
 
@@ -142,6 +135,14 @@ ggf. Tabelle mit weiteren Beispielen außer mailbox.org: Googlemail, Office365, 
 ////
 
 Außerdem wählst du in diesem Schritt eine E-Mail-Vorlage für den E-Mail-Versand.
+
+[IMPORTANT]
+.Live-Modus im Assistenten *E-Mail-Konten* muss aktiviert sein
+====
+Im Assistenten *E-Mail-Konten* im Schritt xref:crm:emailbuilder.adoc#e-mail-server-zugangsdaten[Zugangsdaten] muss im Bereich *Möchtest du den Live-Modus aktivieren?* die Option *Live-Modus aktivieren* aktiviert (material:check_box[role=skyBlue]) sein. Dadurch wird der Testmodus deaktiviert und alle E-Mails werden an die jeweiligen Empfänger:innen versendet. 
+
+Das Aktivieren des Live-Modus gilt global für den gesamten E-Mail-Versand in plentymarkets. Somit auch für den E-Mail-Versand über den Messenger.
+====
 
 [TIP]
 .Nutze die Standardvorlage *Messenger default*
@@ -187,12 +188,10 @@ Im Schritt *Einstellungen für den E-Mail-Empfang* wählst du den oder die Tags,
 
 Im letzten Abschnitt wählst du die Abonnent:innen, die bei neuen Nachrichten informiert werden. Wähle entweder einzelne Benutzer:innen aus der Dropdown-Liste oder wähle Rollen, damit alle dieser Rolle zugewiesenen Benutzer:innen neue Nachrichten in diesem Postfach abonnieren.
 
-[#testmodus-inaktiv]
-==== Testmodus auf inaktiv setzen
+[#zusammenfassung]
+==== Zusammenfassung
 
-Damit du Nachrichten mit dem Messenger versenden kannst, ist es erforderlich, dass der Live-Modus im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten* aktiviert (material:check_box[role=skyBlue]) wird. 
-
-Das Setzen des Testmodus auf *inaktiv* kannst du in diesem Schritt erledigen, ohne den Assistenten verlassen zu müssen. Aktiviere (material:check_box[role=skyBlue]) dazu die Einstellung *Live-Modus aktivieren*.
+In diesem Schritt wird eine Zusammenfassung aller getätigten Eingaben in den einzelnen Schritten aufgelistet. Du kannst deine Angaben prüfen, in den einzelnen Schritten ggf. Anpassungen vornehmen und den Assistenten danach über die Zusammenfassung abschließen.
 
 [#nachrichten-sammeln]
 === Nachrichten im Messenger sammeln
