--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -726,6 +726,8 @@
 
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
+* xref:changelog:november-2022.adoc[Changelogs November 2022]
+** xref:changelog:2022-11-02.adoc[Changelog 02. November 2022]
 * xref:changelog:october-2022.adoc[Changelogs Oktober 2022]
 ** xref:changelog:2022-10-26.adoc[Changelog 26. Oktober 2022]
 ** xref:changelog:2022-10-19.adoc[Changelog 19. Oktober 2022]
